[package]
name = "converter"
license = "GPL-3.0-or-later"
authors = [
  "Jack Tench",
  "wins1ey <wins1ey at wins1ey dot win>"
]
repository = "https://github.com/LibreSplit/converter"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.104", optional = true }

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
spex = "0.2.2"

[features]
default = []
wasm = ["wasm-bindgen"]
